[package]
name = "hyper-unix-connector"
version = "0.1.5"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"
description = "Use hyper with unix-domain sockets"
homepage = "https://github.com/akshayknarayan/hyper-unix-connector"
repository = "https://github.com/akshayknarayan/hyper-unix-connector"
license = "ISC"

[dependencies]
anyhow = "1.0"
futures-util = "0.3"
hex = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.0", features = ["net", "rt-multi-thread"] }
pin-project = "1.0"
