[package]
name = "hyper-unix-connector"
version = "0.2.0"
authors = ["Akshay Narayan <akshayn@mit.edu>"]
edition = "2018"
description = "Use hyper with unix-domain sockets"
homepage = "https://github.com/akshayknarayan/hyper-unix-connector"
repository = "https://github.com/akshayknarayan/hyper-unix-connector"
license = "ISC"

[dependencies]
anyhow = "1.0"
hex = "0.4"
hyper = { version = "0.14", features = ["client", "server", "http1"] }
pin-project = "1.0"
tokio = { version = "1.0", features = ["net"] }

[dev-dependencies]
futures-util = "0.3"
hyper = { version = "0.14", features = ["runtime", "stream"] }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
